# icdar_hack

./: .gitignore  README.md  augment.py  data.py  dl_from_transkribus_coll.py  evaluation.py  export.py  gemini_line_tasks.py  generate_splits.py  gt.py  params.py  pyproject.toml  run_eval_lines.py  tracking.py  train.py
