[project]
name = "swedish-lion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.15.0",
    "jiwer>=4.0.0",
    "lightning>=2.6.1",
    "lmdb>=1.8.1",
    "mlflow>=3.10.1",
    "opencv-python>=4.13.0.92",
    "ruff>=0.15.6",
    "torch==2.10.0",
    "torchvision",
    "transformers>=5.3.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
